<resources>
    <string name="app_name">瞳步建图</string>
    <string name="ip_chassis">192.168.11.1</string>
    <string name="tv_wifi">WIFI：%1$s</string>
    <string name="tv_ip">IP</string>
    <string name="et_ip_hint_tips">请输入底盘的ip地址</string>
    <string name="tv_chassis_connect_tips">请先连接到底盘连接的无线网络</string>
    <string name="btn_connect">连接</string>
    <string name="tv_connect_history">连接历史记录</string>
    <string name="delete_success">删除成功</string>
    <string name="ip_empty_tips">ip地址不能为空</string>
    <string name="connect_ing">连接中…</string>
    <string name="reconnect_ing">重连中…</string>
    <string name="reconnect_success">重连成功</string>
    <string name="tv_device_info">设备信息</string>
    <string name="tv_config">配置</string>
    <string name="tv_map_list">地图列表</string>
    <string name="tv_low_battery">低电量</string>
    <string name="tv_test">测试</string>
    <string name="tv_about_app">关于APP</string>
    <string name="tv_set_speed">导航速度</string>
    <string name="speed_low">低速</string>
    <string name="speed_medium">中速</string>
    <string name="speed_high">高速</string>
    <string name="tv_rotate_speed">旋转角速度</string>
    <string name="tv_current_rotate_speed_tips">最大旋转角速度%.1fm/s</string>
    <string name="tv_navigate_option">导航选项</string>
    <string name="navigate_mode">导航模式</string>
    <string name="navigate_free">自由导航</string>
    <string name="navigate_track">轨道导航</string>
    <string name="navigate_track_first">轨道优先</string>
    <string name="motion_to_point_mode">到点模式</string>
    <string name="motion_to_point_exact">精确到点</string>
    <string name="motion_to_point_ordinary">普通到点</string>
    <string name="avoid_obstacle_mode">避障模式</string>
    <string name="meet_obstacle_avoid">遇障绕行</string>
    <string name="meet_obstacle_suspend">遇障暂停</string>
    <string name="tv_try_time">导航尝试时间%1$d分钟</string>
    <string name="tv_try_time_describe">导航尝试时间为0则默认尝试3次</string>
    <string name="tv_wait_time">暂停等待时间%1$d分钟</string>
    <string name="tv_wait_time_describe">暂停等待时间为0则一直等待，直到障碍物移除</string>
    <string name="tv_map_location">地图定位</string>
    <string name="unknown">未知</string>
    <string name="btn_map_load">加载</string>
    <string name="btn_map_delete">删除</string>
    <string name="tv_bind_now">%1$s(当前地图)</string>
    <string name="tv_version">%1$s\n版本：%2$s</string>
    <string name="tv_scan_to_download">扫码下载客户端</string>
    <string name="tv_contact_us">联系我们</string>
    <string name="tv_version_update">版本更新</string>
    <string name="tv_robot">瞳步机器人</string>
    <string name="tv_scan_follow">扫码关注微信公众号</string>
    <string name="tv_info">电话：13371936025\n邮箱：sales@tobotai.com\n网址：www.tobotai.com\n地址：上海市奉贤区金海公路6055号临港南桥科技城29号楼506</string>
    <string name="tv_stop">停止</string>
    <string name="tv_task">任务</string>
    <string name="tv_navigate">导航</string>
    <string name="tv_status_show">建图状态[%1$s]，定位质量[%2$d]，充电状态[%3$s]%4$s，电量[%5$d]，运动状态[%6$s]</string>
    <string name="mapping_true">开</string>
    <string name="mapping_false">关</string>
    <string name="tv_charge_true">充电中</string>
    <string name="tv_charge_false">未充电</string>
    <string name="charging_docking">-[在桩]</string>
    <string name="charging_direct">-[直充]</string>
    <string name="tv_pose_show">[%1$s,%2$s,%3$s]</string>
    <string name="tv_pose">位置[%1$s,%2$s,%3$s]</string>
    <string name="tv_distance">间距[%.2fm]</string>
    <string name="tv_map">地图</string>
    <string name="tv_add_point">位置点</string>
    <string name="tv_action">动作</string>
    <string name="tv_go_charge">充电</string>
    <string name="tv_edit">编辑</string>
    <string name="tv_reset_charge">重置充电桩</string>
    <string name="tv_relocate">重定位</string>
    <string name="tv_manual_add_location">手动加点</string>
    <string name="tv_clear_map">清除地图</string>
    <string name="tv_save_map">保存地图</string>
    <string name="tv_build_map">建图</string>
    <string name="tv_virtual_wall">虚拟墙</string>
    <string name="tv_virtual_track">虚拟\n轨道</string>
    <string name="tv_rubber">橡皮擦</string>
    <string name="emergency_stop_tips">急停按钮被按</string>
    <string name="break_stop_tips">刹车按钮被按</string>
    <string name="direct_charge_to_navigate_tips">正在直充</string>
    <string name="control_bus_disconnect">ControlBusDisconnect</string>
    <string name="low_battery">低电</string>
    <string name="motor_error">电机异常</string>
    <string name="battery_communicate_error">电池通信异常</string>
    <string name="btn_add_current_point">添加当前位置点</string>
    <string name="btn_sort_point">按编号排序</string>
    <string name="btn_edit">编辑</string>
    <string name="btn_delete">删除</string>
    <string name="tv_title_add_location">添加当前位置点</string>
    <string name="tv_title_edit_location">编辑当前位置点</string>
    <string name="move_remind">请让一让</string>
    <string name="charge_result">充电结果：%1$b</string>
    <string name="navigate_result">导航结果：%1$b</string>
    <string name="rotate_result">旋转结果：%1$b</string>
    <string name="move_recover_quality_low_tips">当前定位质量小于%1$d，无法正常导航，建议手动停止，请将机器移动至特征点明显的地方进行重定位操作</string>
    <string name="relocate_ing">定位中…</string>
    <string name="relocate_ing_with_size">定位中…\n%1$s</string>
    <string name="relocate_success">重定位成功</string>
    <string name="relocate_fail">重定位失败</string>
    <string name="tv_map_switch_tips">确认要加载地图吗？加载后将会清除当前的地图</string>
    <string name="tv_map_delete_tips">确认要删除该地图吗？</string>
    <string name="tv_location_delete_tips">确认要删除该位置点吗？</string>
    <string name="tv_clear_map_tips">确认要清除地图吗？</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_confirm">确认</string>
    <string name="set_ing">设置中…</string>
    <string name="set_success">设置成功</string>
    <string name="set_fail">设置失败</string>
    <string name="name_empty_tips">位置点名称不能为空</string>
    <string name="map_name_empty_tips">地图名称不能为空</string>
    <string name="tv_title_save_map">保存地图</string>
    <string name="et_hint_map_tips">请输入地图名称</string>
    <string name="et_hint_location_tips">请输入位置点名称</string>
    <string name="et_hint_edit_location_tips">请输入位置点名称（必填）</string>
    <string name="et_hint_edit_location_china_tips">请输入中文名称（选填）</string>
    <string name="et_hint_edit_location_english_tips">请输入英文名称（选填）</string>
    <string name="btn_update_location">更新点位置</string>
    <string name="tv_mark_location">标定点</string>
    <string name="tv_arrive_not_rotate">到点不旋转</string>
    <string name="et_relocate_area_width">重定位区域宽(单位:米)</string>
    <string name="et_relocate_area_height">重定位区域高(单位:米)</string>
    <string name="tv_relocate_area_tips">当重定位区域宽或高为0时，则默认局部重定位</string>
    <string name="name_rule_tips">请按需求合理命名位置点名称，建议以数字类型命名</string>
    <string name="name_edit_rule_tips">位置点名称、中英文名称均可修改，但不能重复，重定位用于当前位置点执行定位操作</string>
    <string name="map_rule_tips">请按需求合理命名地图名称，当保存的地图名称与现有地图名称一致时，将会覆盖保存</string>
    <string name="load_ing">加载中…</string>
    <string name="load_success">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="clear_ing">清除中…</string>
    <string name="clear_success">清除成功</string>
    <string name="clear_fail">清除失败</string>
    <string name="save_ing">保存中…</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="number_edit_fail_tips">该位置点名称已存在，请重新命名</string>
    <string name="name_china_edit_fail_tips">该中文名称已存在，请重新命名</string>
    <string name="name_english_edit_fail_tips">该英文名称已存在，请重新命名</string>
    <string name="slam_not_connect_tips">暂未连接到底盘</string>
    <string name="net_not_connect_tips">网络已断开，请先连接到网络</string>
    <string name="version_latest">未检测到新版本</string>
    <string name="tv_upgrade_title">发现新版本</string>
    <string name="tv_upgrade_tips">检测到新版本，是否更新？</string>
    <string name="tv_ignore">忽略</string>
    <string name="tv_upgrade">更新</string>
    <string name="check_ing">检测中…</string>
    <string name="download_fail">下载失败</string>
    <string name="permission_sd_card_open_tips">请先打开内存卡储存权限</string>
    <string name="tv_apk_download_begin">开始下载</string>
    <string name="tv_apk_download_tips">瞳步建图下载中</string>
    <string name="tv_apk_content_tips">正在连接服务器</string>
    <string name="tv_apk_download_complete">下载完成，点击安装</string>
    <string name="pose_request_success_tips">位置点获取成功</string>
    <string name="pose_request_fail_tips">位置点获取失败，请稍后再试</string>
    <string name="tv_create_task">创建任务</string>
    <string name="task_point_empty_tips">请先创建位置点</string>
    <string name="tv_create_task_title">创建任务（点击选择）</string>
    <string name="btn_remove_point">移除</string>
    <string name="tv_loop_implement">无限次循环</string>
    <string name="btn_start_implement">开始执行</string>
    <string name="pose_get_fail_tips">机器姿态获取失败</string>
    <string name="tv_charge_status_tips">%1$s %2$s</string>
    <string name="tv_docking_true">在充电桩</string>
    <string name="tv_docking_false">未在充电桩</string>
    <string name="tv_map_size_tips">%1$sx%2$sm</string>
    <string name="float_format">%.3f</string>
    <string name="tv_file_catalog">文件目录：%1$s</string>
    <string name="tv_back">返回</string>
    <string name="tv_add_line">手动\n添加</string>
    <string name="tv_confirm_line">拖拽\n确认</string>
    <string name="tv_remove_line">移除</string>
    <string name="tv_clear_line">清空</string>
    <string name="tv_wipe_white">擦白</string>
    <string name="tv_wipe_grey">擦灰</string>
    <string name="tv_wipe_black">擦黑</string>
    <string name="point_sort_success">排序成功</string>
    <string name="btn_known">我知道了</string>
    <string name="tv_current_low_battery_tips">最低电量%1$d</string>
    <string name="log_file_out">Log文件输出(%1$s)</string>
    <string name="log_no">无</string>
    <string name="log_logcat">Logcat</string>
    <string name="log_adb">ADB</string>
    <string name="log_select_tips">请重新进入应用开始记录log</string>
    <string name="et_rotate_speed_hint_tips">请输入旋转角度值</string>
    <string name="tv_rotate_direction">旋转方向</string>
    <string name="to_left">向左</string>
    <string name="to_right">向右</string>
    <string name="btn_send">发送</string>
    <string name="rotate_speed_empty_tips">旋转角度值不能为空</string>
    <string name="tv_move_navigate_distance">向前导航</string>
    <string name="et_navigate_distance_hint_tips">请输入导航距离（单位：米）</string>
    <string name="navigate_distance_empty_tips">导航距离值不能为空</string>
    <string name="tv_save_task">保存任务</string>
    <string name="et_hint_task_tips">请输入任务名称</string>
    <string name="tv_task_tips">任务名称代表所创建任务的标志，不能重复</string>
    <string name="task_empty_tips">任务名称不能为空</string>
    <string name="task_name_exist_tips">路径名称已存在，请重新命名</string>
    <string name="tv_execute_task_tips">请确认任务是否匹配当前地图（点击执行，长按删除）</string>
    <string name="tv_task_point">%1$s(%2$s)</string>
    <string name="tv_implement_count">循环次数：%1$d</string>
    <string name="tv_task_point_tips">运动轨迹\n%1$s</string>
    <string name="tv_charge_switch">添加回桩充电</string>
    <string name="tv_charge_switch_tips">若开启充电，运动轨迹中将添加回桩充电</string>
    <string name="tv_loop_tips">若开启无限次循环，则优先无限次循环执行，循环次数将失效</string>
    <string name="tv_signal_tips">网络信号：%1$d(%2$s)</string>
    <string name="signal_1">强</string>
    <string name="signal_2">较强</string>
    <string name="signal_3">一般</string>
    <string name="slam_disconnect_tips">底盘连接断开，请退出当前应用(%1$s)</string>
    <string name="operate_fail">操作失败</string>
    <string name="tv_reset_charge_title">重置充电桩</string>
    <string name="tv_reset_charge_tips">步骤如下\n1、将充电桩移至新的位置\n2、将机器导航或推到充电桩上并处于充电状态\n3、点击“重定位”，重定位成功后点击“重置”\n4、将机器从充电桩导航出来，即重置成功</string>
    <string name="btn_reset">重置</string>
    <string name="reset_not_charge_tips">请先将机器移动至充电桩上</string>
    <string name="reset_success">重置成功</string>
    <string name="reset_fail">重置失败</string>
    <string name="sensor_bumper_trigger">防碰撞传感器触发</string>
    <string name="sensor_cliff_trigger">防跌落(#%1$d)传感器触发</string>
    <string name="et_float_num_format">1234567890.</string>
    <string name="btn_set">设置</string>
    <string name="tv_speed_multiplier">倍速（打开后速度翻倍）</string>
    <string name="tv_touch_count">触摸次数：%1$d</string>
    <string name="et_touch_count_hint">请输入触摸次数</string>
</resources>