<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/rg_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/rb_back"
            style="@style/rb_map_operate"
            android:text="@string/tv_back" />

        <RadioButton
            android:id="@+id/rb_add_line"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_add_line" />

        <RadioButton
            android:id="@+id/rb_confirm_line"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_confirm_line" />

        <RadioButton
            android:id="@+id/rb_remove_line"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_remove_line" />

        <RadioButton
            android:id="@+id/rb_clear_line"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_clear_line" />
    </RadioGroup>
</LinearLayout>