<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <RadioGroup
        android:id="@+id/rg_wipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <RadioButton
            android:id="@+id/rb_back"
            style="@style/rb_map_operate"
            android:text="@string/tv_back" />

        <RadioButton
            android:id="@+id/rb_wipe_white"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_wipe_white" />

        <RadioButton
            android:id="@+id/rb_wipe_grey"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_wipe_grey" />

        <RadioButton
            android:id="@+id/rb_wipe_black"
            style="@style/rb_map_operate"
            android:layout_marginLeft="@dimen/rb_wall_margin"
            android:text="@string/tv_wipe_black" />
    </RadioGroup>
</LinearLayout>