<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_popup_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_build_map"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_item_height"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/popup_margin_left_right"
        android:layout_marginRight="@dimen/popup_margin_left_right"
        android:drawableRight="@drawable/selector_switch"
        android:drawablePadding="@dimen/iv_drawable_padding"
        android:gravity="center"
        android:text="@string/tv_build_map"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_add_point"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:text="@string/tv_add_point"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_reset_charge"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:text="@string/tv_reset_charge"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_relocation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:text="@string/tv_relocate"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_manual_add_location"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:text="@string/tv_manual_add_location"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_clear_map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:text="@string/tv_clear_map"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/popup_view_line" />

    <TextView
        android:id="@+id/tv_save_map"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bottom_bg"
        android:gravity="center"
        android:text="@string/tv_save_map"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />
</LinearLayout>