<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/view_head" />

    <com.tobot.map.module.common.HorizontalConflictScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/view_margin_top"
            android:paddingBottom="@dimen/view_margin_top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/view_margin_left_right"
                android:layout_marginRight="@dimen/view_margin_left_right"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <TextView
                    style="@style/tv_content"
                    android:text="@string/navigate_mode" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_navigate_free"
                        style="@style/rb_speed"
                        android:text="@string/navigate_free" />

                    <RadioButton
                        android:id="@+id/rb_navigate_track"
                        style="@style/rb_speed"
                        android:layout_marginLeft="@dimen/rb_wall_margin"
                        android:text="@string/navigate_track" />

                    <RadioButton
                        android:id="@+id/rb_navigate_track_first"
                        style="@style/rb_speed"
                        android:layout_marginLeft="@dimen/rb_wall_margin"
                        android:text="@string/navigate_track_first" />
                </RadioGroup>

                <View
                    style="@style/view_line"
                    android:layout_marginTop="@dimen/view_margin_top" />

                <TextView
                    style="@style/tv_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:text="@string/motion_to_point_mode" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_motion_ordinary"
                        style="@style/rb_speed"
                        android:text="@string/motion_to_point_ordinary" />

                    <RadioButton
                        android:id="@+id/rb_motion_exact"
                        style="@style/rb_speed"
                        android:layout_marginLeft="@dimen/rb_wall_margin"
                        android:text="@string/motion_to_point_exact" />
                </RadioGroup>

                <View
                    style="@style/view_line"
                    android:layout_marginTop="@dimen/view_margin_top" />

                <TextView
                    style="@style/tv_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:text="@string/avoid_obstacle_mode" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_obstacle_avoid"
                        style="@style/rb_speed"
                        android:text="@string/meet_obstacle_avoid" />

                    <RadioButton
                        android:id="@+id/rb_obstacle_suspend"
                        style="@style/rb_speed"
                        android:layout_marginLeft="@dimen/rb_wall_margin"
                        android:text="@string/meet_obstacle_suspend" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_try_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/tv_tips"
                        android:textSize="@dimen/tv_content" />

                    <com.tobot.bar.seekbar.StripSeekBar
                        android:id="@+id/sb_try_time"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/sb_speed_height"
                        android:layout_marginLeft="@dimen/sb_speed_margin_left"
                        android:paddingLeft="@dimen/sb_speed_padding_left"
                        android:paddingRight="@dimen/sb_speed_padding_left"
                        app:bar_bgColor="@color/sb_speed_bg"
                        app:bar_centerColor="@color/sb_speed_center"
                        app:bar_circleColor="@color/sb_speed_circle"
                        app:bar_endColor="@color/sb_speed_end"
                        app:bar_height="@dimen/sb_speed_bar_height"
                        app:bar_startColor="@color/sb_speed_start"
                        app:bar_textShow="false" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_try_time_tips"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_try_time_describe"
                    android:textColor="@color/tv_tips"
                    android:textSize="@dimen/tv_tips" />

                <View
                    style="@style/view_line"
                    android:layout_marginTop="@dimen/view_margin_top" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_item_height"
                    android:background="@drawable/selector_item_bg"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tv_content_click"
                        android:text="@string/tv_map_location" />

                    <TextView
                        android:id="@+id/tv_map_location_switch"
                        style="@style/iv_right_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/selector_switch"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <View style="@style/view_line" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/layout_item_height"
                    android:background="@drawable/selector_item_bg"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/tv_content_click"
                        android:text="@string/tv_speed_multiplier" />

                    <TextView
                        android:id="@+id/tv_speed_multiplier"
                        style="@style/iv_right_arrow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/selector_switch"
                        tools:ignore="RelativeOverlap" />
                </RelativeLayout>

                <View style="@style/view_line" />

                <TextView
                    android:id="@+id/tv_touch_count"
                    style="@style/tv_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:text="@string/tv_touch_count" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_top"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_touch_count"
                        style="@style/ll_et_weight"
                        android:hint="@string/et_touch_count_hint"
                        android:inputType="number" />

                    <Button
                        android:id="@+id/btn_set_touch_count"
                        style="@style/ll_btn_weight"
                        android:text="@string/btn_set" />
                </LinearLayout>

                <View
                    style="@style/view_line"
                    android:layout_marginTop="@dimen/view_margin_top" />
            </LinearLayout>
        </LinearLayout>
    </com.tobot.map.module.common.HorizontalConflictScrollView>
</LinearLayout>
