<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_popup_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_virtual_wall"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_top_bg"
        android:gravity="center"
        android:text="@string/tv_virtual_wall"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/view_line" />

    <TextView
        android:id="@+id/tv_virtual_track"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/popup_margin_left_right"
        android:paddingRight="@dimen/popup_margin_left_right"
        android:text="@string/tv_virtual_track"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />

    <View style="@style/view_line" />

    <TextView
        android:id="@+id/tv_rubber"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_item_height"
        android:background="@drawable/selector_item_bottom_bg"
        android:gravity="center"
        android:paddingLeft="@dimen/popup_margin_left_right"
        android:paddingRight="@dimen/popup_margin_left_right"
        android:text="@string/tv_rubber"
        android:textColor="@color/tv_white"
        android:textSize="@dimen/tv_content" />
</LinearLayout>